<resources>
    <string name="app_name">ExConsumindoViaCEPRetrofit2</string>

    <string name="btn_buscar_por_cep">Buscar por CEP</string>
    <string name="et_cep">Digite o CEP</string>
    <string name="et_rua">Digite a Rua</string>
    <string name="et_cidade">Digite a Cidade</string>
    <string name="btn_buscar_por_rua_cidade_estado">Buscar por Rua Cidade e Estado</string>

    <!-- Avisos/Erros Toast -->
    <string name="toast_erro_cep">CEP inválido</string>
    <string name="toast_erro_generico">Algum erro ocorreu</string>
    <string name="toast_erro_dados_invalidos">Dados inválidos</string>
    <string name="toast_aviso_retorno">Retorno</string>

    <string-array name="sp_ufs">
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>
</resources>